# Restir_CPP

./: .gitignore  CMakeLists.txt  README.md
Source/Samples/: CMakeLists.txt
Source/Samples/Restir/: ApplicationPathsManager.h  CMakeLists.txt  FloatRandomNumberGenerator.h  GBuffer.cpp  GBuffer.h  GBuffer.slang  GBuffer_raytraced.cpp  Light.slangh  LightManager.cpp  LightManager.h  NRD.slangh  NRDDenoiserPass.cpp  NRDDenoiserPass.h  NRDDenoiserPass_MultipleNrd_WIP.cpp  NRDDenoiserPass_MultipleNrd_WIP.h  NRDDenoiserPass_PackNRD.slang  NRDDenoiserPass_UnpackNRD.slang  NRDEncoding.slangh  OptixDenoiserPass.cpp  OptixDenoiserPass.h  OptixDenoiserPass_ComputeMotionVectors.slang  OptixDenoiserPass_ConvertBufToTex.slang  OptixDenoiserPass_ConvertNormalsToBuf.slang  OptixDenoiserPass_ConvertTexToBuf.slang  RISPass.cpp  RISPass.h  RISPass.slang  Reservoir.slangh  ReservoirManager.cpp  ReservoirManager.h  RestirApp.cpp  RestirApp.h  SceneName.h  SceneSettings.h  ShadingPass.cpp  ShadingPass.h  ShadingPass.slang  Singleton.h  SpatialFilteringPass.cpp  SpatialFilteringPass.h  (+7 more)
Source/Samples/Restir/Dependencies/NvidiaNRD/lib/Release/: NRD.lib
TestScenes/DragonBuddha/: README.txt  dragonbuddha.mtl  dragonbuddha.pyscene
TestScenes/Sponza/: sponza.pyscene
